WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36197
Missing support for showing layer borders and repaint count on Windows
https://bugs.webkit.org/show_bug.cgi?id=36197
Summary
Missing support for showing layer borders and repaint count on Windows
Enrica Casucci
Reported
2010-03-16 15:24:46 PDT
We need to add support to turn on and off the debug borders for the compositing layers on Windows.
Attachments
Patch
(8.18 KB, patch)
2010-03-16 15:40 PDT
,
Enrica Casucci
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2010-03-16 15:40:56 PDT
Created
attachment 50847
[details]
Patch
WebKit Review Bot
Comment 2
2010-03-16 15:45:22 PDT
Attachment 50847
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/platform/graphics/win/GraphicsLayerCACF.cpp:42: Alphabetical sorting problem. [build/include_order] [4] WebKit/win/WebPreferences.h:411: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 3
2010-03-16 15:46:28 PDT
Comment on
attachment 50847
[details]
Patch
> + cg.setFillColor(Color(0, 0, 0, 0xff), DeviceColorSpace);
In a lot of other places we write this as Color::black instead. r=me
Enrica Casucci
Comment 4
2010-03-17 11:01:43 PDT
Committed revision 56118. Changed color to Color::black.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug