Missing support for showing compositing layers borders and repaint count on Windows. <rdar://problem/7760736> <https://bugs.webkit.org/show_bug.cgi?id=36197>

Reviewed by Darin Adler.

WebCore:

* platform/graphics/win/GraphicsLayerCACF.cpp:
(WebCore::WebLayer::drawInContext): Modified to use the correct font on Windows.

WebKit/win:

* Interfaces/IWebPreferencesPrivate.idl:
* WebPreferenceKeysPrivate.h:
* WebPreferences.cpp:
(WebPreferences::initializeDefaultSettings):
(WebPreferences::showDebugBorders):
(WebPreferences::setShowDebugBorders):
(WebPreferences::showRepaintCounter):
(WebPreferences::setShowRepaintCounter):
* WebPreferences.h:
* WebView.cpp:
(WebView::notifyPreferencesChanged):



Canonical link: https://commits.webkit.org/47412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56118 268f45cc-cd09-0410-ab3c-d52691b4dbfc