WebKit/win/WebPreferences.cpp
@@ -257,6 +257,8 @@ void WebPreferences::initializeDefaultSettings()
     CFDictionaryAddValue(defaults, CFSTR(WebKitPluginAllowedRunTimePreferenceKey), pluginAllowedRunTime.get());
 
     CFDictionaryAddValue(defaults, CFSTR(WebKitAcceleratedCompositingEnabledPreferenceKey), kCFBooleanTrue);
+    
+    CFDictionaryAddValue(defaults, CFSTR(WebKitShowDebugBordersPreferenceKey), kCFBooleanFalse);
 
     defaultSettings = defaults;
 }
@@ -1400,6 +1402,30 @@ HRESULT WebPreferences::acceleratedCompositingEnabled(BOOL* enabled)
 #else
     *enabled = FALSE;
 #endif
+    return S_OK;
+}
+
+HRESULT WebPreferences::showDebugBorders(BOOL* enabled)
+{
+    *enabled = boolValueForKey(CFSTR(WebKitShowDebugBordersPreferenceKey));
+    return S_OK;
+}
+
+HRESULT WebPreferences::setShowDebugBorders(BOOL enabled)
+{
+    setBoolValue(CFSTR(WebKitShowDebugBordersPreferenceKey), enabled);
+    return S_OK;
+}
+
+HRESULT WebPreferences::showRepaintCounter(BOOL* enabled)
+{
+    *enabled = boolValueForKey(CFSTR(WebKitShowRepaintCounterPreferenceKey));
+    return S_OK;
+}
+
+HRESULT WebPreferences::setShowRepaintCounter(BOOL enabled)
+{
+    setBoolValue(CFSTR(WebKitShowRepaintCounterPreferenceKey), enabled);
     return S_OK;
 }
 
